# review-tool

./: .gitignore  Makefile  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: api.dart  ffi.dart  main.dart  service_binder.dart  settings.dart
lib/state/: review_list_state.dart  review_state.dart
lib/ui/: nav_bar.dart  provider_selector.dart
lib/ui/views/review/: change_type.dart  discussions.dart  file_tree.dart  file_view.dart  overview.dart  review.dart  review_card.dart
lib/ui/widgets/: file_type_icon.dart  review_open_label.dart  scroll_container.dart  user_avatar.dart  user_list_item.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
native/: .gitignore  Cargo.toml
native/examples/: github_api.rs  gitlab_api.rs  upsource_api.rs
native/src/: api.rs  lib.rs  models.rs  util.rs
native/src/modules/: mod.rs
native/src/modules/github/: mod.rs
native/src/modules/github/graphql/: .graphqlconfig  mod.rs  schema.graphql
native/src/modules/github/graphql/commands/: mark_file_viewed_state.graphql  mod.rs
native/src/modules/github/graphql/queries/: get_review_file_summaries.graphql  get_reviews.graphql  mod.rs
native/src/modules/gitlab/: mod.rs
native/src/modules/upsource/: api.rs  messages.rs  mod.rs
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+11 files in other folders)
